tests/macros/raw_select/filter.rs
fn main() {
    let q = requestty::questions![RawSelect { filter: todo!() }];
}
